# ytdlp-companion

./: .gitignore  .ralphrc  AGENTS.md  API_가격_비교_분석.md  CLAUDE.md  KOREAN_VARIETY_CSS_SNIPPETS.css  KOREAN_VARIETY_INDEX.txt  MANIFEST.md  QUICKSTART.md  README-TEXT-EFFECTS.txt  README.md  START_HERE.md  package-lock.json  package.json  playwright.config.ts  schema.sql  wrangler.toml
.claude/: settings.json  settings.local.json
.ralph/: AGENT.md  PROMPT.md  fix_plan.md
api/: EvoLink_AI_NanoBanana2_TaskDetail_Technical_Doc.md  EvoLink_NanoBanana_Pro_Image_Generation_Technical_Doc.md  EvoLink_Veo3.1_Pro_Video_Generation_Technical_Doc.md  Grok_Imagine_Video_API_Documentation.md  Typecast_Download_Options.md
companion/: README.md
companion/src-tauri/: Cargo.toml  tauri.conf.json
companion/src-tauri/capabilities/: default.json
companion/src-tauri/icons/: icon.icns
companion/src-tauri/src/: auto_updater.rs  browser_search.rs  ffmpeg.rs  main.rs  platform.rs  rembg.rs  server.rs  takeover.rs  tts.rs  video_tunnel.rs  whisper.rs  ytdlp.rs
docs/: ACCEPTANCE_CRITERIA.md  ADVANCED_TEXT_SHADOW_RECIPES.md  BUG_REPORT.md  CHECKLIST.md  CLOUDFLARE_DEPLOY_GUIDE.md  CONTEXT.md  DATA_MODEL.md  FEATURE_PRESERVATION.md  FEATURE_REQUEST.md  FONTS_README.md  FONT_CATEGORY_REFERENCE.txt  GAS_FEEDBACK_HANDLER.js  INTEGRATION_GUIDE.md  LAYER_BREAKDOWNS.md  PLAN.md  PROMPT_ENGINEERING.md  QWEN3_TTS_INTEGRATION.md  README_TEXT_SHADOW.md  RECIPE_SUMMARY.md  REFACTORING_TARGET.md  SHADOW_TECHNICAL_SPECS.md  SHOPPING_EDIT_PROTOCOL_V7.md  advanced_text_shadow_recipes.json  all-tts-protocol.md  cafe24-vps-setup-guide.md  channel-style-cloning-guideline-v1.md  cloudflare-worker-proxy.js  companion-tunnel-design.md  cross-dubbing-guide-v3.md  dubbing-translation-guideline-v5.6.md  edit-point-protocol-v8.md  ghostcut-replacement-plan.md  gpu-self-hosting-research-332.md  long-to-short-snack-guideline-v4.md  quick-production-design.md  s2s-style-cloning-template-v7.md  server-cost-comparison.md  shopping-script-guideline-v31.md  shopping-script-guideline-v36.md  tikitaka-edit-point-protocol-v14.md  (+7 more)
migrations/: 001_add_tier_columns.sql
premiere-motion-extension/: .debug  .gitignore  INSTALL.md  README.md  index.html  manifest.json  package-lock.json  package.json  tsconfig.json
scripts/: build-compact-media.js  bulk-register.mjs  compress-previews.mjs  generate-slide-previews.mjs  generate-style-previews.mjs  generate-tts-samples.mjs  generate-visual-previews.mjs  mirror-companion-release.sh  overnight.sh  tasks.md  verify-companion-release-sync.mjs
server/: .env.example  index.js  install.sh  package.json  update-ytdlp.sh
src/: App.tsx  README.md  advanced-text-shadow-recipes.css  constants.ts  index.html  index.tsx  metadata.json  package-lock.json  package.json  test-full-pipeline.mjs  test-real.mjs  test-tts-stt-integration.mjs  text-shadow-showcase.html  tsconfig.json  types.ts  vite.config.ts  vitest.config.ts  webcodecs-audio.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  platform.rs  rembg.rs  server.rs  tts.rs  ytdlp.rs
test-e2e/: 1003-1002-1038-1035-thumbnail-storage.test.ts  1012-project-bulk-delete.test.ts  1018-script-image-prompt.test.ts  1021-keyword-radar-chart.spec.ts  1045-editroom-srt-asset-zip.test.ts  1066-result-summary.json  1066-tunnel-fileuri.test.ts  1066-ui-debug.test.ts  1090-bulk-delete-sync-guard.test.ts  846-companion-detect.test.ts  868-874-867-sound-studio-sync.test.ts  891-892-capcut-multisource.test.ts  891-youtube-capcut.test.ts  907-companion-fixes.test.ts  907-nle-client-merge.test.ts  907-update-detect.test.ts  909-quota-fallback.test.ts  914-companion-health.test.ts  925-companion-health.test.ts  928-976-apikey-cost.test.ts  935-companion-update-banner.test.ts  948-longform-sync.test.ts  960-947-thumbnail-studio.test.ts  964-video-analysis-fiction.test.ts  974-companion-audio.test.ts  982-blob-extension-error.test.ts  990-992-989-986-real.test.ts  990-992-989-986.test.ts  ai-chat-image-attach.test.ts  ai-chat-playground.test.ts  audio-merge-fix.test.ts  bulk-register-verify.test.ts  capcut-issues-verify.test.ts  companion-banner-ui.test.ts  companion-gate-force.test.ts  companion-gate-outdated-recovery.test.ts  companion-gate-release-pending.test.ts  (+40 more)
(+497 files in other folders)
