[package]
name = "all-in-one-helper"
version = "1.0.0"
description = "All In One Helper — 안정적이고 빠른 로컬 AI 미디어 처리"
authors = ["groove1027"]
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
tempfile = "3"
dirs = "6"
base64 = "0.22"
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
url = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
