[package]
name = "all-in-one-helper"
version = "2.4.4"
description = "All In One Helper — 로컬 미디어 게이트웨이 (v2.4.3: 트레이 전용 + 자동 업데이트)"
authors = ["groove1027"]
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "process"] }
axum = { version = "0.8", features = ["multipart"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "cookies", "gzip", "brotli"] }
tempfile = "3"
dirs = "6"
base64 = "0.22"
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
url = "2"
regex-lite = "0.1"
urlencoding = "2"
chrono = "0.4"
flate2 = "1"
# [v2.0] Video Tunnel 모듈 의존성
hex = "0.4"
rand = "0.8"
sha2 = "0.10"
tar = "0.4"
thiserror = "1"
# [v2.3] WebView 이미지 검색 — 실제 브라우저로 구글/네이버 검색 (봇 탐지 차단 불가)
headless_chrome = "1.0"

# [v2.0.1] Windows 안정 file identity API — std::os::windows::fs::MetadataExt::file_index()
# 가 nightly-only(`windows_by_handle`)이라 stable Windows 빌드 실패. winapi-util은 transitive
# dep으로 이미 들어와 있으므로 직접 등록만 하면 추가 다운로드 없음.
[target.'cfg(windows)'.dependencies]
winapi-util = "0.1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
